--- a/taskt/packages.config
+++ b/taskt/packages.config
@@ -16,6 +16,7 @@ limitations under the License.
 -->
 <packages>
   <package id="BouncyCastle.Cryptography" version="2.2.1" targetFramework="net48" />
+  <package id="H.InputSimulator" version="1.4.2" targetFramework="net48" />
   <package id="HtmlAgilityPack" version="1.11.46" targetFramework="net48" />
   <package id="ImapX" version="2.0.0.18" targetFramework="net452" />
   <package id="JetBrains.Annotations" version="2022.3.1" targetFramework="net48" />
